--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ div.mainBox{
     position: relative;
 }
 canvas{
-    background: transparent;
     position: absolute;
     top: 0;
     left: 0;
@@ -21,6 +20,6 @@ canvas{
     z-index: 2;
 }
 #canvasBeta{
-    background: grey;
+   /*background-color: grey;*/
     z-index: 1;
 }
